--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.20.0",
     "font-awesome": "^4.7.0",
     "jspdf": "^2.1.1",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-speech-recognition": "^3.2.3",
     "styled-components": "^5.2.0"
   },
   "scripts": {
